Fixed the alignment of the headers in the detail section of the word details

--- a/web/app/user/sass/components/_textContent.scss
+++ b/web/app/user/sass/components/_textContent.scss
@@ -26,6 +26,7 @@
              font-size: 13px;
              font-weight: 300;
              color: #4d4d4d;
+             text-align: left;
 
 
         }
