--- a/web/app/user/sass/pages/_wordsDetail.scss
+++ b/web/app/user/sass/pages/_wordsDetail.scss
@@ -74,11 +74,13 @@
                             margin-left: 1px;
                             text-align: left;
                         }
-                        .header-reflection {
+                        .header-reflection-audiovideo {
 
                              width: 853px;
-                             text-align: left;
                              margin: 0 auto;
+                        }
+                        .header-reflection {
+                             text-align: left;
                              padding-left: 0px;
                              h3 {
                                  line-height: 1.5em;
